# solvector

./: .gitignore  LICENSE  README.md  install.bat  pyproject.toml  run_eval_norm.bat  run_eval_val.bat  run_train_32.bat  run_train_512_from32.bat
solvector/: __init__.py  ckpt_info.py  compare_ckpts.py  compare_neighbors.py  evaluate.py  gpu_check.py  nn_neighbors.py  predict_yvec.py  train_yvec.py
tools/: cos_check.py
