[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solvector"
version = "0.9.3"
description = "Y-vector training and evaluation utilities"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name="Vince", email="example@example.com" }]

# Keep runtime deps minimal; PyTorch installed separately via install.bat
dependencies = [
    "numpy>=1.23",
    "tqdm>=4.66",
    "regex>=2023.0.0"
]

[tool.setuptools]
# Explicitly list package to avoid accidental inclusion
packages = ["solvector"]
